@@ -7,3 +7,4 @@ bitv.ps.gz
 test.ml
 autom4te.cache/
 autom4te.cache
+a.out
